--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ pedalboard
 pandas==2.1.1
 Pillow==10.0.1
 protobuf==4.24.4
-pyarrow==13.0.0
+pyarrow
 pydeck==0.8.0
 pydub==0.25.1
 Pygments==2.16.1
